Доработаны методы в PostgreSQLController, убран выбор даты у сборщиков, добавлен новый модуль и зависимость kafka